# Temp

./: .gitignore  CMakeLists.txt  main.cpp  main.qml
Sub/: CMakeLists.txt  librum_global.hpp  something.cpp  something.hpp
build-Temp-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
